--- a/templates/demandes/show.html.twig
+++ b/templates/demandes/show.html.twig
@@ -25,7 +25,7 @@
             </tr>
             <tr>
                 <th>Budget</th>
-                <td>{{ demande.budget }}</td>
+                <td>{{ demande.formatedBudget }}</td>
             </tr>
             <tr>
                 <th>CreatedAt</th>
