--- a/templates/map/map.html.twig
+++ b/templates/map/map.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Signaler un problème{% endblock %}
 {% block stylesheets %}
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
           crossorigin="" />
@@ -15,23 +15,28 @@
     <div id="map">
     </div>
 
-    <button id="btnmodal" class="button addEventButt is-outlined">Add event</button>
+    <button id="btnmodal" class="button addEventButt is-outlined is-danger is-large">Signaler un problème</button>
+    {% if (is_granted('ROLE_MAIRE')) %}
+    <button id="btnmodal" class="button listEventButt is-outlined is-danger is-large">Liste</button>
+    {% endif %}
 
     <div id="modal" class="modal">
         <div class="modal-background"></div>
         <div class="modal-card">
             <header class="modal-card-head">
-                <p class="modal-card-title">Modal title</p>
+                <p class="modal-card-title">Signaler un problème</p>
                 <button id="cancel" class="delete" aria-label="close"></button>
             </header>
             <section class="modal-card-body">
                 {{ form_start(form) }}
-                {{ form_widget(form) }}
-                <button class="btn">{{ button_label|default('Save') }}</button>
-                {{ form_end(form) }}
+                {{ form_widget(form.Type, {'attr': {'class': 'input is-rounded is-primary', 'placeholder': 'Type'}})  }}
+                {{ form_widget(form.address, {'attr': {'class': 'input is-rounded is-primary', 'placeholder': 'Adresse'}})  }}
+                {{ form_widget(form.zipCode, {'attr': {'class': 'input is-rounded is-primary', 'placeholder': 'Code Postal'}})  }}
+                {{ form_widget(form.city, {'attr': {'class': 'input is-rounded is-primary', 'placeholder': 'Ville'}})  }}
             </section>
             <footer class="modal-card-foot">
-                <button class="button is-success">Save changes</button>
+                <button class="button is-primary">{{ button_label|default('Save') }}</button>
+                {{ form_end(form) }}
                 <button id="closeModal" class="button closeModal">Cancel</button>
             </footer>
         </div>
@@ -56,7 +61,7 @@
             // Créer l'objet "macarte" et l'insèrer dans l'élément HTML qui a l'ID "map"
             macarte = L.map('map').setView([lat, lon], zoom);
             // Leaflet ne récupère pas les cartes (tiles) sur un serveur par défaut. Nous devons lui préciser où nous souhaitons les récupérer. Ici, openstreetmap.fr
-            L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}.png', {
+            L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}.png', {
                 // Il est toujours bien de laisser le lien vers la source des données
                 attribution: 'données © <a href="//osm.org/copyright">OpenStreetMap</a>/ODbL - rendu <a href="//openstreetmap.fr">OSM France</a>',
                 minZoom: 1,
@@ -83,16 +88,32 @@
                 ];
             // Nous parcourons la liste des adresses
             for (adresse in adresses) {
-                let marker = L.marker([adresses[adresse].lat, adresses[adresse].long]).bindPopup(
-                    "<h5>"+adresses[adresse].type+"</h5> <p>"
-                    + adresses[adresse].address + "</p>"+
-                    "<p>"
-                    + adresses[adresse].ZC + " " + adresses[adresse].city +
-                    '</p> <a href="/' + adresses[adresse].id + '/validate"> Valider </a>'
-                )
-                    .addTo(macarte);
+
+                var customIcon = L.icon({
+                    iconUrl: 'https://www.passerelle-esc.com/wp-content/uploads/2017/04/attention.png',
+                    iconSize: [25, 25],
+                    popupAnchor: [0,-15]
+                });
+
+                var customPopup = "<h1>" + adresses[adresse].type + "</h1> <p>"
+                + adresses[adresse].address + "</p>"+
+                "<p>"
+                + adresses[adresse].ZC + " " + adresses[adresse].city +
+                '</p> <a href="/' + adresses[adresse].id + '/validate"> <img src=\'http://swiftyjimmy.com/wp-content/uploads/2017/09/approved.png\' width=\'30px\'/></a> "'
+                let marker = L.marker([adresses[adresse].lat, adresses[adresse].long], {icon: customIcon});
+
+                // marker.bindPopup(
+                // "<h1>"+adresses[adresse].type+"</h1> <p>"
+                // + adresses[adresse].address + "</p>"+
+                // "<p>"
+                // + adresses[adresse].ZC + " " + adresses[adresse].city +
+                // '</p> <a href="/' + adresses[adresse].id + '/validate"> Approuver </a>'
+                // )
+
+                marker.bindPopup(customPopup);
+                    marker.addTo(macarte);
                 // Nous ajoutons la popup. A noter que son contenu (ici la variable ville) peut être du HTML
-                //marker.bindPopup(adresses[adresse].place).openPopup();
+                // marker.bindPopup(adresses[adresse].place).openPopup();
             }
         };
     </script>
