--- a/templates/demandes/index.html.twig
+++ b/templates/demandes/index.html.twig
@@ -197,7 +197,7 @@
                 </div>
 
                 <div class="level-item has-text-centered">
-                    <a href="{{ path('demandes_show', {'id' : demande.id }) }}" class="button is-primary is-outlined">Qui a voté ?</a>
+                    <a href="{{ path('voters', {'id' : demande.id }) }}" class="button is-primary is-outlined">Qui a voté ?</a>
                 </div>
             </div>
         </div>
