--- a/templates/home/show.html.twig
+++ b/templates/home/show.html.twig
@@ -17,6 +17,11 @@
     </section>
 
     <div class="container">
+    <div class="columns">
+        <div class="column">
+            <a href="{{ path('demandes_ouvertes') }}" class="button is-primary">liste des demandes</a>
+        </div>
+    </div>
         <div class="colmuns">
             <div class="column">
                 <h3 class="title is-3 has-text-grey">Sommaire</h3>
